scripts/firewall/rules.v6
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:cjdns - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j ACCEPT -p tcp --dport 22
-A INPUT -j ACCEPT -p tcp --dport 80
-A INPUT -j ACCEPT -p tcp --dport 443
-A INPUT -j ACCEPT -p tcp --dport 3000
-A INPUT -j ACCEPT -p tcp --dport 5201
-A INPUT -j ACCEPT -p tcp --dport 4001
-A INPUT -j ACCEPT -p tcp --dport 9090
-A INPUT -j ACCEPT -p tcp --dport 9100
-A INPUT -j REJECT --reject-with icmp6-port-unreachable
COMMIT
